deployment/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    name: api-gateway-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 9191
      targetPort: 9191
  selector:
      name: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry-service
  labels:
    name: service-registry-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
      name: service-registry
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  labels:
    name: appointment-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
      name: appointment
---
apiVersion: v1
kind: Service
metadata:
  name: labs-service
  labels:
    name: labs-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
      name: labs
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  labels:
    name: patient-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
      name: patient
---
apiVersion: v1
kind: Service
metadata:
  name: reports-service
  labels:
    name: reports-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
      name: reports
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    name: users-service-svc    
    app: bc58-app
  namespace: bc58
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
      name: users
